[gd_scene load_steps=8 format=3 uid="uid://d1htujlp1dkxy"]

[ext_resource type="Script" path="res://DerbyCubes/derby_cube.gd" id="1_g52d0"]
[ext_resource type="FontFile" uid="uid://dnqu1umxi2wl0" path="res://Assets/VonwaonBitmap-16px.ttf" id="2_td2au"]

[sub_resource type="Gradient" id="Gradient_dj1xa"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3yrpw"]
gradient = SubResource("Gradient_dj1xa")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kagfa"]

[sub_resource type="Gradient" id="Gradient_qa3us"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_57pxh"]
gradient = SubResource("Gradient_qa3us")
width = 36
height = 16

[node name="DerbyCube" type="Node2D"]
script = ExtResource("1_g52d0")

[node name="WhiteOutline" type="Sprite2D" parent="."]
position = Vector2(-2.86102e-06, 5.96046e-07)
scale = Vector2(1.375, 1.375)
texture = SubResource("GradientTexture2D_3yrpw")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_kagfa")

[node name="WhiteSection" type="Sprite2D" parent="."]
position = Vector2(26, 36)
texture = SubResource("GradientTexture2D_57pxh")

[node name="Label" type="Label" parent="WhiteSection"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -8.0
offset_right = -18.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_td2au")
theme_override_font_sizes/font_size = 16
text = "1st"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="WhiteSection"]
visible = false
offset_left = -66.0
offset_top = -76.0
offset_right = -26.0
offset_bottom = -53.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "0"

[node name="Label3" type="Label" parent="WhiteSection"]
visible = false
offset_left = -26.0
offset_top = -76.0
offset_right = 14.0
offset_bottom = -53.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "0"
horizontal_alignment = 2
